--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-md": "^1.16.1",
     "react-scripts": "3.4.1",
     "react-tippy": "^1.4.0",
     "typescript": "^3.7.5"
