--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.44",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "godspeed": "^1.3.70",
     "node-sass": "^4.14.1",
@@ -17,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-md": "^1.16.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-tippy": "^1.4.0",
     "typescript": "^3.7.5"
