--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-md": "^1.16.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
     "react-tippy": "^1.4.0",
     "typescript": "^3.7.5"
   },
